# SuccinctEdge

./: BitMap.cpp  BitMap.hpp  CMakeCache.txt  CMakeLists.txt  Constant.hpp  Dictionary.cpp  Dictionary.hpp  JoinLine.cpp  JoinLine.hpp  JoinTable.cpp  JoinTable.hpp  JoinVariables.cpp  JoinVariables.hpp  LiteMatDictionary.cpp  LiteMatDictionary.hpp  Makefile  QueryEngine.cpp  QueryEngine.hpp  RDFStorage.cpp  RDFStorage.hpp  RDFTypeStore.cpp  RDFTypeStore.hpp  README.md  RankBaseElement.cpp  RankBaseElement.hpp  TriplePattern.cpp  TriplePattern.hpp  TripleStore.cpp  TripleStore.hpp  Util.hpp  cmake_install.cmake  main.cpp  quickSortTS.hpp  succinct_edge  succinct_edge.cbp  test_ABOX.nt  triple_store.cbp
test_data/: smallDataExample.nt
test_query/: lubm_query.sparql  small_data_query.sparql
test_tbox/: lite_mat_concepts.txt  lite_mat_properties.txt
